<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RegistrationByIntent</string>
    <string name="menu_settings">Settings</string>
    <string name="title">Employee Registration Page</string>
    <string name="id">Employee ID :</string>
    <string name="name">Name :</string>
    <string name="contact">Contact No. :</string>
    <string name="email">Email ID :</string>
    <string name="state">State :</string>
    <string name="city">City :</string>
    <string name="image">image</string>
    <string name="imageDesc">image</string>
    <string name="reset">Reset</string>
    <string name="submit">Submit</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_view_registration_page">ViewRegistrationPage</string>
    <string name="title2">Employee information </string>
    

</resources>